tests/macro-tests/cases/widget_new/missing_arg1.stderr
error[E0061]: this method takes 2 arguments but 1 argument was supplied
  --> cases/widget_new/missing_arg1.rs:10:9
   |
9  |       let _ = Wgt! {
   |  _____________-
10 | |         background_gradient = 0.deg(), ;
   | |         ^^^^^^^^^^^^^^^^^^^
11 | |         margin = 0;
12 | |     };
   | |_____- argument #2 is missing
   |
note: method defined here
  --> $WORKSPACE/crates/zng-wgt-fill/src/lib.rs
   |
   | pub fn background_gradient(child: impl UiNode, axis: impl IntoVar<LinearGradientAxis>, stops: impl IntoVar<GradientStops>) -> impl UiNode {
   |        ^^^^^^^^^^^^^^^^^^^
help: provide the argument
  --> $WORKSPACE/crates/zng-wgt/src/wgt.rs
   |
   - #[widget($crate::Wgt)]
   + background_gradient(0.deg(), /* stops */)
   |
